text container overflow fix

--- a/Front-End/src/components/TextContainer/textContainer.module.css
+++ b/Front-End/src/components/TextContainer/textContainer.module.css
@@ -15,6 +15,10 @@
   margin: auto;
   overflow-wrap: break-word;
   outline: none;
+  overflow-y: auto;
+}
+.EditableContent::-webkit-scrollbar {
+  width: 0px;
 }
 .textStatus {
   display: flex;
